Заготовка MeterValues