@@ -20,82 +20,69 @@ public class TimeSetterImpl implements TimeSetter {
 
     @Override
     public void setTime(ZonedDateTime time) {
-        while (true) {
-            if (connectorsInfoCache.stationIsCharging()) {
-                try {
-                    Thread.sleep(1000);
-                } catch (InterruptedException e) {
-                    log.error("An error while waiting for the end of charging");
-                }
-            } else {
-                break;
-            }
-        }
-        setSystemTime(time);
-    }
+        if (!connectorsInfoCache.stationIsCharging()) {
+            String TimeHearbeat = time.toString();
+            int index1 = TimeHearbeat.indexOf('+');
 
-    private void setSystemTime(ZonedDateTime time) {
-        String TimeHearbeat = time.toString();
-        int index1 = TimeHearbeat.indexOf('+');
+            if (index1 != -1) {
+                TimeHearbeat = TimeHearbeat.substring(0, TimeHearbeat.indexOf('+'));
 
-        if (index1 != -1) {
-            TimeHearbeat = TimeHearbeat.substring(0, TimeHearbeat.indexOf('+'));
+                log.info(TimeHearbeat);
+                log.info("Получение времени после редактирования");
 
-            log.info(TimeHearbeat);
-            log.info("Получение времени после редактирования");
+                TimeHearbeat = TimeHearbeat.replace("T", " ");
+                TimeHearbeat = TimeHearbeat.replace("Z", "");
 
-            TimeHearbeat = TimeHearbeat.replace("T", " ");
-            TimeHearbeat = TimeHearbeat.replace("Z", "");
+                log.info(TimeHearbeat);
 
-            log.info(TimeHearbeat);
-
-            if (IS_OS_WINDOWS) {
-                try {
-                    log.info("Попытка задать время");
-                    Runtime.getRuntime().exec("cmd /C date " + "'" + TimeHearbeat + "'");
-                    Runtime.getRuntime().exec("cmd /C time " + "'" + TimeHearbeat + "'");
-                } catch (IOException e) {
-                    log.error("Время задать не удалось");
-                }
-            } else {
-                try {
-                    String Command = "sudo timedatectl set-time " + "'" + TimeHearbeat + "'";
+                if (IS_OS_WINDOWS) {
                     try {
-                        Runtime.getRuntime().exec(new String[]{"bash", "-c", Command});
-                        log.info("Текущее время системы откорректировано");
+                        log.info("Попытка задать время");
+                        Runtime.getRuntime().exec("cmd /C date " + "'" + TimeHearbeat + "'");
+                        Runtime.getRuntime().exec("cmd /C time " + "'" + TimeHearbeat + "'");
                     } catch (IOException e) {
                         log.error("Время задать не удалось");
                     }
-                    Runtime.getRuntime().exec(Command);
-                } catch (IOException ex) {
-                    log.error("Выполнить команду не удалось");
-                }
-            }
-        } else {
-            log.info(TimeHearbeat);
-            log.info("Получение времени после редактирования");
-            TimeHearbeat = TimeHearbeat.replace("T", " ");
-            TimeHearbeat = TimeHearbeat.replace("Z", "");
-            log.info(TimeHearbeat);
-            String Command = "sudo timedatectl set-time " + "'" + TimeHearbeat + "'";
-            if (!IS_OS_WINDOWS) {
-                try {
+                } else {
                     try {
-                        Runtime.getRuntime().exec(new String[]{"bash", "-c", Command});
-                        log.info("Текущее время системы откорректировано");
-                    } catch (IOException e) {
-                        log.error("Время задать не удалось");
+                        String Command = "sudo timedatectl set-time " + "'" + TimeHearbeat + "'";
+                        try {
+                            Runtime.getRuntime().exec(new String[]{"bash", "-c", Command});
+                            log.info("Текущее время системы откорректировано");
+                        } catch (IOException e) {
+                            log.error("Время задать не удалось");
+                        }
+                        Runtime.getRuntime().exec(Command);
+                    } catch (IOException ex) {
+                        log.error("Выполнить команду не удалось");
                     }
-                } catch (Exception ex) {
-                    log.error("Ошибка при попытке задать время");
                 }
             } else {
-                try {
-                    log.info("Попытка задать время");
-                    Runtime.getRuntime().exec("cmd /C date " + "'" + TimeHearbeat + "'");
-                    Runtime.getRuntime().exec("cmd /C time " + "'" + TimeHearbeat + "'");
-                } catch (IOException e) {
-                    log.error("Ошибка при попытке задать время");
+                log.info(TimeHearbeat);
+                log.info("Получение времени после редактирования");
+                TimeHearbeat = TimeHearbeat.replace("T", " ");
+                TimeHearbeat = TimeHearbeat.replace("Z", "");
+                log.info(TimeHearbeat);
+                String Command = "sudo timedatectl set-time " + "'" + TimeHearbeat + "'";
+                if (!IS_OS_WINDOWS) {
+                    try {
+                        try {
+                            Runtime.getRuntime().exec(new String[]{"bash", "-c", Command});
+                            log.info("Текущее время системы откорректировано");
+                        } catch (IOException e) {
+                            log.error("Время задать не удалось");
+                        }
+                    } catch (Exception ex) {
+                        log.error("Ошибка при попытке задать время");
+                    }
+                } else {
+                    try {
+                        log.info("Попытка задать время");
+                        Runtime.getRuntime().exec("cmd /C date " + "'" + TimeHearbeat + "'");
+                        Runtime.getRuntime().exec("cmd /C time " + "'" + TimeHearbeat + "'");
+                    } catch (IOException e) {
+                        log.error("Ошибка при попытке задать время");
+                    }
                 }
             }
         }
